<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/capamain"
        android:layout_width="454dp"
        android:layout_height="280dp"
        android:contentDescription="@string/Capa"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <ImageView
        android:id="@+id/NetflixLogo"
        android:layout_width="48dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/netflixlogo"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/NetflixLogo"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/NetflixLogo"
        app:layout_constraintTop_toTopOf="@+id/NetflixLogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/List"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10259918" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25171" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exciting"
        android:textColor="#F2ECEC"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linhaguiaEsquerda"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thriller"
        android:textColor="#F8F5F5"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinister"
        android:textColor="#F6F3F3"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaguiaEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_play_24"
        android:text="@string/watch"
        android:textColor="#FFFFFF"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonList"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_add_24"
        android:padding="0dp"
        android:text="@string/my_list"
        android:textColor="#FFFFFF"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linhaguiaEsquerda"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_info_24"
        android:padding="0dp"
        android:text="@string/details"
        android:textColor="#FFFFFF"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/releases"
        android:textColor="#FBF9F9"
        app:layout_constraintStart_toStartOf="@+id/linhaguiaEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/movie1"
        android:layout_width="95dp"
        android:layout_height="56dp"
        android:contentDescription="@string/movie1"
        app:layout_constraintBottom_toBottomOf="@+id/movie2"
        app:layout_constraintEnd_toStartOf="@+id/movie2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/linhaguiaEsquerda"
        app:layout_constraintTop_toTopOf="@+id/movie2"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/movie2"
        android:layout_width="95dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/movie2"
        app:layout_constraintEnd_toStartOf="@+id/movie3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/movie1"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/movie3"
        android:layout_width="95dp"
        android:layout_height="56dp"
        android:contentDescription="@string/movie3"
        app:layout_constraintBottom_toBottomOf="@+id/movie2"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/movie2"
        app:layout_constraintTop_toTopOf="@+id/movie2"
        app:srcCompat="@drawable/f3" />

    <ImageView
        android:id="@+id/logodragon"
        android:layout_width="178dp"
        android:layout_height="107dp"
        android:contentDescription="@string/logodragon"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/houseofthedragon" />

</androidx.constraintlayout.widget.ConstraintLayout>